# vulture-bot

./: .gitignore  README.md  REFACTOR_PLAN.md  pyproject.toml  railway.json  requirements.txt  vulture_cred.env.example
src/vulture/: __init__.py  __main__.py  analysis.py  clients.py  config.py  daemon.py  market.py  momentum.py  notify.py  pipeline.py  scoring.py  sheets.py  state.py
src/vulture/signals/: reddit.py  stocktwits.py
src/vulture/trackers/: cramer.py
