[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulture-bot"
version = "2.0.0"
description = "Options-focused trending-stock scanner: Reddit/Stocktwits signals, Massive market data, Claude scoring, Discord alerts."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.116.0",
    "massive>=2.8.0",
    "praw>=8.0.0",
    "gspread>=6.2.0",
    "google-auth>=2.56.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.0",
    "requests>=2.34.0",
]

[project.scripts]
vulture = "vulture.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
